recursion.hanoi.SplitHanoi1.scala.error
Erreur de compilation :
SplitHanoi1:2: error: ':' expected but ',' found.
def hanoi(height:Int, src:Int, other1:Int, other2, dst:Int) {
                                                 ^SplitHanoi1:31: error: identifier expected but '}' found.
}
^